[project]
name = "tisseo_api"
version = "0.0.1"
description = "Python library to interact with the official tisseo api"
readme = "README.md"
authors = [
    { name = "ritonun", email = "placeholder@email.com" }
]
requires-python = ">=3.13"
dependencies = ["requests>=2.32"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["black", "flake8"]

[tool.setuptools.packages.find]
where = ["src"]
